--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,13 @@
 {
   "name": "vue-infinite-scroll",
   "description": "An infinite scroll directive for vue.js.",
+  "keywords": [
+    "infinite-scroll",
+    "vue"
+  ],
   "main": [
     "vue-infinite-scroll.js"
-    ],
+  ],
   "dependencies": {
     "vue": "~1.0.10"
   },
@@ -23,10 +27,12 @@
     "rollup-plugin-node-resolve": "~1.5.0",
     "xo": "~0.12.1"
   },
-  "authors": [
-    "long.zhang@ele.me"
-  ],
-   "license": "MIT",
+  "authors": long.zhang@ele.me",
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/ElemeFE/vue-infinite-scroll.git"
+  },
+  "license": "MIT",
   "ignore": [
     "**/*.txt",
     "README",
