--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,7 @@
     "rollup-plugin-node-resolve": "~1.5.0",
     "xo": "~0.12.1"
   },
-  "authors": long.zhang@ele.me",
+  "authors": "long.zhang@ele.me",
   "repository": {
   "type": "git",
   "url": "https://github.com/ElemeFE/vue-infinite-scroll.git"
