fix rollup config

--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-rollup-preprocessor": "^2.0.1",
     "phantomjs-prebuilt": "^2.1.5",
-    "rollup": "^0.25.4",
-    "rollup-plugin-babel": "^2.4.0",
-    "rollup-plugin-commonjs": "^2.2.1",
-    "rollup-plugin-env": "^0.21.2",
-    "rollup-plugin-node-resolve": "^1.5.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "rollup": "^0.41.4",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-uglify": "1.0.1",
+    "rollup-plugin-node-resolve": "^2.0.0",
     "vue": "^2.0.3",
     "xo": "^0.12.1"
   },
