--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-infinite-scroll",
+  "name": "@landtechnologies/vue-infinite-scroll",
   "version": "3.0.0",
   "description": "An infinite scroll directive for vue.js.",
   "main": "vue-infinite-scroll.js",
